--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
+    "@types/fs-extra": "^8.0.0",
     "@types/node": "^12.7.1",
     "@types/xml2js": "^0.4.4"
   },
@@ -22,6 +23,7 @@
     "@types/yargs-parser": "^13.0.0",
     "axios": "^0.19.0",
     "chalk": "^2.4.2",
+    "fs-extra": "^8.1.0",
     "xml2js": "^0.4.19",
     "yargs-parser": "^13.1.1"
   }
