--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.5",
   "description": "react native dev tools",
   "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kida7/rn-upgrade.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
