--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-upgrade",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "react native dev tools",
   "main": "dist/index.js",
   "repository": {
@@ -12,6 +12,7 @@
   },
   "bin": {
     "opensim": "./dist/opensim.js",
+    "translate": "./dist/translate.js",
     "rn-upgrade": "./dist/upgrade.js"
   },
   "author": "kida7",
@@ -19,7 +20,10 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
+    "@types/crypto-js": "^3.1.43",
+    "@types/csv-parse": "^1.2.2",
     "@types/fs-extra": "^8.0.0",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^12.7.1",
     "@types/xml2js": "^0.4.4"
   },
@@ -27,7 +31,12 @@
     "@types/yargs-parser": "^13.0.0",
     "axios": "^0.19.0",
     "chalk": "^2.4.2",
+    "crypto-js": "^3.1.9-1",
+    "csv-parse": "^4.6.3",
     "fs-extra": "^8.1.0",
+    "lodash": "^4.17.15",
+    "rn-upgrade": "/Users/vinhle/Desktop/projects/rntools",
+    "translate-google": "^1.3.5",
     "xml2js": "^0.4.19",
     "yargs-parser": "^13.1.1"
   }
