--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-upgrade",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "react native dev tools",
   "main": "dist/index.js",
   "repository": {
@@ -18,6 +18,7 @@
   "author": "kida7",
   "license": "ISC",
   "devDependencies": {
+    "@types/argparse": "^1.0.38",
     "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
     "@types/crypto-js": "^3.1.43",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "@types/yargs-parser": "^13.0.0",
+    "argparse": "^1.0.10",
     "axios": "^0.19.0",
     "chalk": "^2.4.2",
     "crypto-js": "^3.1.9-1",
