--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@types/yargs-parser": "^13.0.0",
     "argparse": "^1.0.10",
-    "axios": "^0.19.0",
+    "axios": ">=0.21.1",
     "chalk": "^2.4.2",
     "crypto-js": "^3.1.9-1",
     "csv-parse": "^4.6.3",
