--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-upgrade",
-  "version": "1.0.19",
+  "version": "1.1.0",
   "description": "react native dev tools",
   "main": "dist/index.js",
   "repository": {
@@ -26,7 +26,8 @@
     "@types/fs-extra": "^8.0.0",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.7.1",
-    "@types/xml2js": "^0.4.4"
+    "@types/xml2js": "^0.4.4",
+    "@types/yargs": "^17.0.32"
   },
   "dependencies": {
     "@types/yargs-parser": "^13.0.0",
@@ -39,6 +40,7 @@
     "lodash": "^4.17.15",
     "translate-google": "^1.3.5",
     "xml2js": "^0.4.19",
+    "yargs": "^17.7.2",
     "yargs-parser": "^13.1.1"
   }
 }
